# search-hn

./: .gitignore  AGENTS.md  README.md  pyproject.toml
backend/: Cargo.toml  Dockerfile  README.md  build.rs
backend/lib/: lib.rs  triton.rs
backend/lib/catchup/: error.rs  mod.rs
backend/lib/cli/: mod.rs
backend/lib/config/: mod.rs
backend/lib/db/: models.rs  schema.rs
backend/lib/firebase_client/: error.rs  items.rs  mod.rs
backend/lib/firebase_listener/: listener.rs  mod.rs
backend/lib/hn_processor/: embedder.rs  main.rs  mod.rs
backend/lib/queue/: mod.rs
backend/lib/server/: mod.rs  monitoring.rs
backend/lib/state/: mod.rs
backend/lib/sync_service/: error.rs  firebase_worker.rs  mod.rs  ranges.rs
backend/lib/worker/: mod.rs  pool.rs  worker.rs
backend/protos/: model_config.proto  triton.proto
backend/src/: main.rs
crates/: Cargo.toml  sample-logs.json
crates/catchup_worker/: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs  diesel.toml
crates/catchup_worker/lib/: build_info.rs  commands.rs  lib.rs  logging.rs
crates/catchup_worker/lib/cli/: mod.rs
crates/catchup_worker/lib/db/: mod.rs  models.rs  schema.rs  sqlite_test.rs
crates/catchup_worker/lib/firebase_listener/: listener.rs
crates/catchup_worker/lib/segment_manager/: mod.rs  ops.rs  store.rs  types.rs
crates/catchup_worker/lib/server/: mod.rs  monitoring.rs
crates/catchup_worker/lib/state/: mod.rs
crates/catchup_worker/lib/sync_service/: catchup_orchestrator.rs  dlq.rs  error.rs  firebase_worker.rs  ingest_worker.rs  mod.rs  types.rs  updater_state.rs
crates/catchup_worker/lib/sync_service/ingest_worker/: core.rs  error_mapping.rs  fetcher.rs  mod.rs  persister.rs  realtime_executor.rs  realtime_tests.rs  retry.rs  segment_executor.rs  segment_tests.rs  test_support.rs
crates/catchup_worker/migrations/2026-02-07-000001_fix_items_parts_type/: down.sql  up.sql
crates/catchup_worker/migrations/2026-02-14-000003_add_failure_class_to_ingest_state/: up.sql
crates/catchup_worker/migrations/2026-02-15-000004_add_items_indexes_and_generated_columns/: up.sql
crates/catchup_worker/migrations/2026-02-16-000005_add_items_search_tsvector/: down.sql  up.sql
crates/catchup_worker/migrations/2026-02-16-000006_add_items_search_index/: down.sql
crates/catchup_worker/migrations/2026-02-20-000007_add_items_story_id/: up.sql
crates/catchup_worker/sqlite_migrations/2024-05-19-011100_create_hn_tables/: down.sql
crates/catchup_worker/sqlite_migrations/2026-02-07-000001_fix_items_parts_type/: down.sql
crates/catchup_worker/sqlite_migrations/2026-02-15-000004_add_items_indexes_and_generated_columns/: up.sql
crates/catchup_worker/sqlite_migrations/2026-02-16-000005_add_items_search_tsvector/: down.sql  up.sql
crates/catchup_worker/sqlite_migrations/2026-02-16-000006_add_items_search_index/: down.sql  up.sql
crates/catchup_worker/src/: main.rs
crates/catchup_worker/tests/: catchup_e2e.rs  sqlite_test_harness.rs  updater_e2e.rs
crates/hn_app/: Cargo.toml  README.md
crates/hn_app/src/: assets.rs  item_page.rs  main.rs
crates/hn_core/: Cargo.toml
crates/hn_core/migrations/2024-05-19-011100_create_hn_tables/: down.sql  up.sql
crates/hn_core/migrations/2026-02-07-000002_add_ingest_state_tables/: up.sql
crates/hn_core/migrations/2026-02-14-000003_add_failure_class_to_ingest_state/: down.sql
crates/hn_core/migrations/2026-02-15-000004_add_items_indexes_and_generated_columns/: down.sql
crates/hn_core/migrations/2026-02-16-000006_add_items_search_index/: up.sql
crates/hn_core/migrations/2026-02-21-000008_add_kids_order_lookup_index/: down.sql  up.sql
crates/hn_core/migrations/2026-02-21-000009_add_updater_state/: up.sql
crates/hn_core/migrations/2026-02-22-000010_add_ingest_dlq_items/: metadata.toml  up.sql
crates/hn_core/sqlite_migrations/00000000000000_diesel_initial_setup/: down.sql
crates/hn_core/sqlite_migrations/2024-05-19-011100_create_hn_tables/: up.sql
crates/hn_core/sqlite_migrations/2026-02-07-000002_add_ingest_state_tables/: down.sql  up.sql
crates/hn_core/sqlite_migrations/2026-02-15-000004_add_items_indexes_and_generated_columns/: down.sql
crates/hn_core/sqlite_migrations/2026-02-20-000007_add_items_story_id/: down.sql  up.sql
crates/hn_core/sqlite_migrations/2026-02-21-000008_add_kids_order_lookup_index/: down.sql  up.sql
crates/hn_core/sqlite_migrations/2026-02-21-000009_add_updater_state/: down.sql  up.sql
crates/hn_core/sqlite_migrations/2026-02-22-000010_add_ingest_dlq_items/: down.sql  up.sql
crates/hn_core/src/: lib.rs
crates/hn_core/src/db/: migrations.rs  mod.rs  models.rs  schema.rs  sqlite_test.rs  story_tree.rs
docs/: ARCHITECTURE.md  comment-tree-reconstruction.md  tables.md  updater-plan.md  updater-v2-claude.md  v1-gaps.md
exporter/: Dockerfile  README.md  main.py  (+3 more)
(+26 files in other folders)
