[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
name="backend_lib"
path="lib/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
byteorder = "1.4.3"
clap = { version = "4.3.11", features = ["derive"] }
diesel = { version = "2.1.0", features = ["postgres"] }
diesel-async = { version = "0.3.1", features = ["postgres", "deadpool" ]}
dotenv = "0.15.0"
env_logger = "0.10.0"
eventsource-client = {version = "0.11.0"}
flume = "0.11.0"
futures = "0.3.28"
futures-util = "0.3.28"
hyper = "0.14.27"
hyper-openssl = "0.9.2"
hyper-tls = "0.5.0"
log = "0.4.19"
ndarray = "0.15.6"
prost = "0.11.9"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
thiserror = "1.0.44"
tokenizers = "0.13.3"
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = "0.7.8"
tonic = "0.9.2"

[build-dependencies]
tonic-build = "0.9.2"
