[package]
name = "catchup_worker"
version = "0.1.3"
edition = "2021"

[features]
default = []
sqlite-tests = []

[lib]
name="catchup_worker_lib"
path="lib/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.8"
clap = { version = "4.5.57", features = ["derive"] }
diesel = { version = "2.3.6", features = ["postgres"] }
diesel-async = { version = "0.7.4", features = ["postgres", "deadpool", "async-connection-wrapper", "sync-connection-wrapper", "migrations" ]}
diesel_migrations = "2.3.1"
dotenv = "0.15.0"
eventsource-client = {version = "0.16.1"}
flume = "0.12.0"
futures = "0.3.31"
futures-util = "0.3.31"
governor = "0.10.4"
log = "0.4.29"
nonzero_ext = "0.3.0"
prometheus-client = "0.24.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }

[dev-dependencies]
diesel = { version = "2.3.6", features = ["sqlite"] }
diesel-async = { version = "0.7.4", features = ["sqlite", "sync-connection-wrapper"] }
