[package]
name = "hn_core"
version = "0.1.0"
edition = "2021"

[features]
default = []
sqlite-tests = []

[dependencies]
diesel = { version = "2.3.6", features = ["postgres"] }
diesel-async = { version = "0.7.4", features = ["postgres", "deadpool"] }
diesel_migrations = "2.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
diesel = { version = "2.3.6", features = ["sqlite"] }
